--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,1 +1,14 @@
 <p>experiencia works!</p>
+<div class="card mat-card">
+    <div id="experience">
+         <div class="card-titles">
+             <h2>Experiencia</h2>
+             <div class="btn-edit"><a href="#" class="btn-right"><i class="fa fa-plus"></i></a></div>
+         </div>
+    </div>
+</div> 
+
+
+
+
+ <input type="file" id="file1" onchange="showFile2(this)">
