--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,120 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: 'Poppins';
+    src: url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
+}
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+body{
+    font-family: sans-serif;    
+}
+
+.container{
+    max-width: 500px;
+    margin: 30px auto;
+    overflow: auto;
+    min-height: 300px;
+    border: 1px solid steelblue;
+    padding: 30px;
+    border-radius: 5px;
+}
+
+.btn {
+    display: inline-block;
+    background: #000;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    margin: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 15px;
+    font-family: inherit;
+}
+.btn:focus {
+    outline: none;
+}
+.btn:active {
+    transform: scale(0.98);
+}
+.btn-block {
+    display: block;
+    width: 100%;
+}
+
+.form-control {
+    margin: 20px 0;
+}
+
+.form-control label {
+    display: block;
+}
+
+.form-control input {
+    width: 100%;
+    height: 40px;
+    margin: 5px;
+    padding: 3px 7px;
+    font-size: 17px;
+}
+
+.form-control-check {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.form-control-check label {
+    flex: 1;
+}
+
+.form-control-check input {
+    flex: 2;
+    height: 20px;
+}
+
+
+
+.mat-card{
+    border-radius: 32px;
+    margin: 20px 20px;
+    padding: 20px;
+    border-color: blueviolet;
+}
+
+.mat-card#first-card{
+    padding: 0;
+
+}
+div#profile-background{
+    
+    display: flex;
+    z-index: 1;
+}
+
+div#profile-background img{
+    width: 100%;
+    border-radius: 32px 32px 0 0;
+}
+/*  
+    h1{ color:black;}
+    Para componentes
+
+    */
+.profile-image{
+    position: absolute;
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    margin-top: -150px;
+    z-index: 1;
+}
+
+div#info-actions{
+    display: flex;
+}
