--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
+
+
+
+<router-outlet></router-outlet>
 <app-header></app-header>
 <app-acercade></app-acercade>
-<app-experiencia></app-experiencia>
-<app-skill></app-skill>
-<app-educacion></app-educacion>
-<app-proyectos></app-proyectos>
-<div class="container"><router-outlet></router-outlet></div>
+<app-projects></app-projects>
+
+
+
+
+
