agregar servicios y models

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,8 @@
 
-
+<div>
 
 <router-outlet></router-outlet>
-<app-header></app-header>
-<app-acercade></app-acercade>
-<app-projects></app-projects>
-
+</div>
 
 
 
