--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,10 @@
 <p>header works!</p>
 
 <div class="card mat-card" id="first-card">
-  <div id="profile-background">
+  <!-- <div id="profile-background">
     <img src="assets/images/helly.jpg" />
     
-  </div>
+  </div>-->
   <div id="info" style="padding: 20px">
     <div id="info-img">
       <img
@@ -46,7 +46,7 @@
       </ul>
     </div>
     <div id="info-actions">
-      <button type="button" class="btn btn-primary">Tengo interes en:</button>
+      <button type="button" class="btn btn-light">Tengo interes en:</button>
       <button type="button" class="btn btn-light">Añadir una seccion</button>
       <button type="button" class="btn btn-light">Más...</button>
     </div>
