--- a/src/app/components/skill/skill.component.html
+++ b/src/app/components/skill/skill.component.html
@@ -1,12 +1,46 @@
 <p>skill works!</p>
-<div class="card mat-card"><div id="Titulos"></div>
-        <div class="card-titles">
-            <h2>Aptitudes y validaciones</h2>
-            <button type="button" class="btn btn-light">Añadir aptitud</button>
-            <button type="button" class="btn btn-light">Hacer un test aptitud</button>
-            <div class="btn-edit"><a href="#" class="btn-right"><i class="fa fa-pen"></i></a></div>
-        </div>
-        <div>
-        Insertar mensajes y funciones aquie
-        </div>
+
+<div class="card mat-card">
+  <div id="Titulos"></div>
+
+  <section id="skills">
+    <h2>Skills</h2>
+    <button type="button" class="btn btn-light">Añadir Skill</button>
+    <button type="button" class="btn btn-light">
+      Hacer un test de mis habilidades
+    </button>
+    <div class="btn-edit">
+      <a href="#" class="btn-right"><i class="fa fa-pen"></i></a>
     </div>
+
+    <app-add-skill (onAddSkill)="nuevaSkill($event)"></app-add-skill>
+    
+    
+    <div cdkDropList cdkDropListOrientation="horizontal" class="e-list" (cdkDropListDropped)="drop($event)">
+      <div class="e-box" *ngFor="let skill of skills" cdkDrag>
+        <app-skill-item
+          [skill]="skill"
+          (onDeleteSkill)="borrarSkill(skill)"
+        ></app-skill-item>
+      </div>
+    </div>
+
+
+<!--
+
+    <article id="s4" class="circle">
+      <circle-progress
+        [percent]="85"
+        [radius]="100"
+        [outerStrokeWidth]="16"
+        [innerStrokeWidth]="8"
+        [outerStrokeColor]="'#78C000'"
+        [innerStrokeColor]="'#C7E596'"
+        [animation]="true"
+        [animationDuration]="300"
+      ></circle-progress>
+    </article>
+    <article id="s5" class="circle"></article>
+    <article id="s6" class="circle"></article>-->
+  </section>
+</div>
