--- a/src/app/components/projects/projects.component.css
+++ b/src/app/components/projects/projects.component.css
@@ -13,3 +13,49 @@
   .cdk-drag-animating {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
+
+  .e-box {
+    background-color: aquamarine;
+    margin: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+
+    border-radius: 32px;
+    margin: 20px 20px;
+   
+  
+    border: solid 1px #ccc;
+    color: rgba(50, 97, 89, 0.87);
+    cursor: move;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    
+    border-radius: 4px;
+    position: relative;
+    z-index: 1;
+    
+    
+    transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+                0 2px 2px 0 rgba(0, 0, 0, 0.14),
+                0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  }
+  
+  .e-box:active {
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+                0 8px 10px 1px rgba(0, 0, 0, 0.14),
+                0 3px 14px 2px rgba(0, 0, 0, 0.12);
+  }
+
+  .e-list {
+    max-width: 100%;
+    border-radius: 32px;
+    border: solid 1px #ccc;
+    min-height: 60px;
+    display: block;
+    background: rgb(148, 189, 110);
+    border-radius: 4px;
+    overflow: hidden;
+  }
