--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,22 +1,32 @@
 <p>projects works!</p>
 <p>Funca</p>
 <div class="card mat-card">
-    <div class="card-titles">
-        <div class="btn-edit" (click)="clickme()">
-          <a href="#" class="btn-right"><i class="fas fa-pen"></i></a>
-        </div>
-        <h2>Proyectos</h2>
-        
-      </div>
+  <div class="card-titles">
+    <div class="btn-edit" (click)="clickme()">
+      <a href="#" class="btn-right"><i class="fas fa-pen"></i></a>
 
-      <app-add-project *ngIf="false"> 
-        (onAddProject)="addProject($event)"
-    </app-add-project>
+      <a href="#" class="btn-right"></a>
+    </div>
+    <h2>Proyectos</h2>
+  </div>
 
-    
-<app-project-item
-*ngFor="let project of projects"
-[project]="project"
-(onDeleteProject)="deleteProject(project)"></app-project-item>
-    
+  <app-add-project (onAddProject)="addProject($event)"> </app-add-project>
+
+  <!-- Es lo mismo que anuncia de drag and drop 
+  <app-project-item
+    *ngFor="let project of projects"
+    [project]="project"
+    (onDeleteProject)="deleteProject(project)"
+  ></app-project-item>-->
+
+  <p>Prubea de drag and cdkDropList</p>
+
+  <div cdkDropList class="e-list" (cdkDropListDropped)="drop2($event)">
+    <div class="e-box" *ngFor="let project of projects" cdkDrag>
+      <app-project-item
+        [project]="project"
+        (onDeleteProject)="deleteProject(project)"
+      ></app-project-item>
+    </div>
+  </div>
 </div>
