--- a/src/styles.css
+++ b/src/styles.css
@@ -9,8 +9,10 @@
     margin: 0;
     padding: 0;
 }
+
+
 body{
-    font-family: sans-serif;    
+    font-family:   -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif  
 }
 
 .container{
@@ -18,7 +20,7 @@ body{
     margin: 30px auto;
     overflow: auto;
     min-height: 300px;
-    border: 1px solid steelblue;
+    border: 1px solid rgb(110, 156, 190);
     padding: 30px;
     border-radius: 5px;
 }
@@ -118,3 +120,5 @@ div#profile-background img{
 div#info-actions{
     display: flex;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
