--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -27,7 +27,7 @@
     <div class="e-box" *ngFor="let experience of experiences" cdkDrag>
       <app-experience-item
         [experiencia]="experience"
-        (onDeleteExperiencia)="deleteExperience(experience)"
+        (onDeleteExperience)="deleteExperience(experience)"
       ></app-experience-item>
     </div>
   </div>
