--- a/src/app/components/projects/projects.component.css
+++ b/src/app/components/projects/projects.component.css
@@ -15,7 +15,7 @@
   }
 
   .e-box {
-    background-color: aquamarine;
+    background-color: rgb(151, 184, 149);
     margin: 5px;
     padding: 10px 20px;
     cursor: pointer;
