--- a/src/app/components/add-educacion/add-educacion.component.html
+++ b/src/app/components/add-educacion/add-educacion.component.html
@@ -1,5 +1,7 @@
 <p>add-educacion works!</p>
-<button
+
+<!--
+  <button
   [ngClass]="{
     btn: true,
     'btn-right': true,
@@ -7,10 +9,105 @@
     'btn-danger': mostrarForm
   }"
   class="btn btn-primary"
-  (click)="toogleForm()"
+  (click)="toogleForm()"	
+  (click)="activeModal.close(false)"
+
 >
-  {{ mostrarForm ? "Cancelar" : "Agregar Educacion" }}
+  {{ mostrarForm ? "Cancelar" : "Agregar Educacion =)" }}
 </button>
+<div class="modal-header">
+	<h1 class="modal-title">Datos Experiencia</h1>
+	<i  class='boton-edicion far fa-window-close' 
+		style="font-size: 2.5rem;"
+		(click)="activeModal.close(false)"
+	></i>
+</div>
+<div class="modal-body">
+	<form [formGroup]="form" (ngSubmit)="onSubmit2()"
+    class="m-3 mt-5"
+  >
+  
+    <div class="mb-3">
+      <label class="form-label" for="enombre">Nombre del Titulo:</label>
+      <input
+        class="form-control"
+        type="text"
+        id="enombre"
+        placeholder="Nombre "
+        formControlName="nombre"
+      />
+    </div>
+  
+    <div class="mb-3">
+      <label class="form-label" for="einstitucion">Institucion:</label>
+      <input
+        class="form-control"
+        type="text"
+        id="einstitucion"
+        placeholder="Nombre de la Institucion "
+        formControlName="institucion"
+      />
+    </div>
+    <div class="mb-3">
+      <label class="form-label" for="enivel">Nivel:</label>
+      <input
+        class="form-control"
+        type="text"
+        formControlName="nivel"
+        id="enivel"
+        placeholder="Nivel de estudio "
+      />
+    </div>
+    <div class="mb-3">
+      <label class="form-label" for="efechaini">Fecha de Inicio:</label>
+      <input
+        class="form-control"
+        type="date"
+        formControlName="fechaini"
+        id="efechaini"
+      />
+    </div>
+  
+    <div class="mb-3">
+      <label class="form-label" for="efechafin">Fecha de finalizacion: </label>
+      <input
+        class="form-control"
+        type="date"
+        formControlName="fechafin"
+        id="efechafin"
+      />
+    </div>
+  
+    <button type="submit" class="btn btn-primary" [disabled]="form.invalid">
+      Agregar Educacion
+    </button>
+  </form>
+</div>
+<div class="modal-footer">
+</div>-->
+
+
+
+
+
+
+
+
+
+<!--
+<button
+[ngClass]="{
+  btn: true,
+  'btn-right': true,
+  'btn-success': !mostrarForm,
+  'btn-danger': mostrarForm
+}"
+class="btn btn-primary"
+(click)="toogleForm()"	
+>
+{{ mostrarForm ? "Cancelar" : "Agregar Educacion =)" }}
+</button>
+
 
 <form
   [formGroup]="form"
@@ -18,6 +115,7 @@
   *ngIf="mostrarForm"
   class="m-3 mt-5"
 >
+
   <div class="mb-3">
     <label class="form-label" for="enombre">Nombre del Titulo:</label>
     <input
@@ -72,4 +170,98 @@
   <button type="submit" class="btn btn-primary" [disabled]="form.invalid">
     Agregar Educacion
   </button>
-</form>
+</form>-->
+
+
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Profile update</h4>
+    <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+  </div>
+  <div class="modal-body">
+    <form [formGroup]="form"  (ngSubmit)="onSubmit($event)" >
+      <div class="mb-3">
+        <label for="dateOfBirth">Date of birth</label>
+        <div class="input-group">
+          <input id="dateOfBirth" class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #dp="ngbDatepicker">
+          <button class="btn btn-outline-secondary calendar" (click)="dp.toggle()" type="button"></button>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="enombre">Nombre del Titulo:</label>
+        <input
+          class="form-control"
+          type="text"
+          id="enombre"
+          placeholder="Nombre "
+          formControlName="nombre"
+        />
+      </div>
+    
+      <div class="mb-3">
+        <label class="form-label" for="einstitucion">Institucion:</label>
+        <input
+          class="form-control"
+          type="text"
+          id="einstitucion"
+          placeholder="Nombre de la Institucion "
+          formControlName="institucion"
+        />
+      </div>
+
+    
+    <div class="mb-3">
+      <label class="form-label" for="enivel">Nivel:</label>
+      <input
+        class="form-control"
+        type="text"
+        formControlName="nivel"
+        id="enivel"
+        placeholder="Nivel de estudio "
+      />
+    </div>
+    <div class="mb-3">
+      <label class="form-label" for="efechaini">Fecha de Inicio:</label>
+      <input
+        class="form-control"
+        type="date"
+        formControlName="fechaini"
+        id="efechaini"
+      />
+    </div>
+  
+    <div class="mb-3">
+      <label class="form-label" for="efechafin">Fecha de finalizacion: </label>
+      <input
+        class="form-control"
+        type="date"
+        formControlName="fechafin"
+        id="efechafin"
+      />
+    </div>
+    <button type="submit" class="btn btn-primary" [disabled]="form.invalid" (click)="modal.close()">
+      Agregar Educacion
+    </button>
+    </form>
+  </div>
+  <div class="modal-footer">
+  
+    <!--<button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Save</button>-->
+  </div>
+</ng-template>
+<button
+[ngClass]="{
+  btn: true,
+  'btn-right': true
+}"
+class="btn btn-primary"
+(click)="toogleForm()"
+(click)="open(content)"	
+>
+Agregar Educacion MODAL
+</button>
+ <!--<button class="btn btn-lg btn-outline-primary" (click)="open(content)">Launch demo modal</button>-->
+
+<hr>
+
+<pre>{{ closeResult }}</pre>
