--- a/src/app/components/project-item/project-item.component.css
+++ b/src/app/components/project-item/project-item.component.css
@@ -1,5 +1,5 @@
 .project{
-    background-color: aquamarine;
+    background-color: rgb(151, 184, 149);
     margin: 5px;
     padding: 10px 20px;
     cursor: pointer;
